button for setting canvas size

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h2>Drawing Board</h2>
+    <button id="size">Set canvas size</button>
     <div id="container">
 
     </div>
