updated clear board

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Drawing Board</h2>
     <button id="size">Set canvas size</button>
     <div id="container">
-
     </div>
+    <button id="clear">Reset</button>
 </body>
 </html>
